--- a/AethersightNET/AethersightNET.csproj
+++ b/AethersightNET/AethersightNET.csproj
@@ -3,6 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>8.0</LangVersion>
+    <Authors>karashiiro</Authors>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Product>Aethersight.NET</Product>
+    <PackageId>Aethersight.NET</PackageId>
+    <RepositoryUrl>https://github.com/karashiiro/Aethersight.NET</RepositoryUrl>
+    <Description>Windows-only .NET wrapper for the Aethersight CLI.</Description>
+    <Version>1.0.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
